Cards alignment fixed

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -41,6 +41,7 @@
 }
 
 .temp {
+  padding-left: 5.5%;
   display: grid;
   grid-template-columns: auto auto auto;
   width: 70%;
@@ -49,4 +50,10 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-column-gap: 3rem;
   grid-row-gap: 4rem;
+}
+
+@media only screen and (max-width:550px){
+  .temp {
+    padding-left: 4px;
+  }
 }
